Load html onto UI and error handling

--- a/src/Documentation/beat/beat.html
+++ b/src/Documentation/beat/beat.html
@@ -40,7 +40,7 @@ div.WordSection1
 <p class=MsoNormal align=center style='text-align:center'>BEAT Documentation Placeholder</p>
 
 <p class=MsoNormal align=center style='text-align:center'><img width=702
-height=428 id="Picture 2" src="./res/Documentation/BEAT Documentation/beatDoc.fld/image001.png"
+height=428 id="Picture 2" src="./src/Documentation/beat/beatDoc.fld/image001.png"
 alt="A screenshot of a social media post&#10;&#10;Description automatically generated"></p>
 
 <p class=MsoNormal>&nbsp;</p>
